# bepbep

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
src/bepbep/: CMakeLists.txt  bepbep.cpp  bepbep.h  block.cpp  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  chunk.cpp  chunk.h  collision.cpp  collision.h  entity.cpp  entity.h  fragment.glsl  game_manager.cpp  game_manager.h  graphics_context.cpp  graphics_context.h  irenderable.h  level.cpp  level.h  light.h  light_manager.cpp  light_manager.h  line_mesh.h  main.cpp  material.h  material_manager.h  mesh.cpp  mesh.h  mesh_builder.cpp  mesh_builder.h  model.cpp  model.h  object.cpp  object.h  opengl_framebuffer.h  opengl_render_buffer.h  pbr_material.h  (+22 more)
src/bepbep/common/: vertex.h
src/bepbep/graphics/: imaterial.h  irenderable.h  light.h  light_manager.cpp  light_manager.h  line_mesh.cpp  line_mesh.h  mesh.cpp  mesh.h  mesh_builder.cpp  mesh_builder.h  model.cpp  model.h  renderer.cpp  renderer.h  rendering_engine.cpp  rendering_engine.h  shader_manager.cpp  shader_manager.h  skybox.h  texture_manager.h
src/bepbep/graphics/ui/: common_window.cpp  common_window.h  level_view.cpp  level_view.h  main_dockspace.cpp  main_dockspace.h
src/bepbep/level/: block.cpp  block.h  chunk.cpp  chunk.h  entity.cpp  level.cpp  level.h  object.h  structure.h
src/bepbep/physics/: collision.cpp  collision.h  physics_engine.cpp  physics_engine.h  ray.h
src/bepbep/shaders/: color_frag.glsl  color_vert.glsl  line_vert.glsl  main_frag.glsl  main_vert.glsl  pbr_frag.glsl  skybox_vert.glsl
(+7 files in other folders)
